--- a/style/form/style-form.css
+++ b/style/form/style-form.css
@@ -31,12 +31,13 @@ html {
 
 /* کلید ها */
 .btn {
+    margin: 15px 0 10px 0;
     display: flex;
     justify-content: center;
 }
 
 .btn .btn {
-    margin: 0 3px 0 3px;
+    margin: 0 5px 0 7px;
     padding: 5px;
     border: 1px solid rgba(0, 0, 0, 0.5);
     border-radius: 10px;
