--- a/style/Home/style.css
+++ b/style/Home/style.css
@@ -3,7 +3,6 @@ html {
     font-family: "vazir";
 }
 
-
 header {
     height: 100%;
     display: flex;
@@ -36,16 +35,14 @@ header {
     text-align: end;
     margin: 10px;
 }
-.text {
+.link {
     text-decoration: none;
     color: rgb(255, 255, 255);
     padding: 5px;
     margin: 5px;
 }
 
-.btn {
 
-}
 .btn-vorod {
     background-color: #56f544;
     border: 1px solid #56f544;
@@ -76,3 +73,87 @@ header {
     border: 1px solid #ffffffa1;
 }
 
+.text {
+    text-align: justify ;
+}
+
+/* باکس های محصولات */
+.mahsol {
+    display: flex;
+    flex-direction: row;
+}
+.mahsol {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 2px solid cadetblue;
+    border-radius: 10px;
+    width: 50%;
+    height: 75%;
+    margin: 0 20px 0 20px;
+    padding: 5px 0 5px 0;
+}
+.I-2 {
+
+    background: url(../image/10111.jpg) no-repeat 10% 70%/cover;
+    width: 75%;
+    height: 355px;
+    border-radius: 5px;
+}
+
+.text-box {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 5px;
+    
+}
+
+/* @media (max-width: 768px) {
+    .mahsol {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .box {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        border: 2px solid cadetblue;
+        border-radius: 10px;
+        width: 50%;
+        height: 75%;
+        margin: 10px 10px 10px 10px;
+        padding: 5px 0 5px 0;
+    }
+    .I-2 {
+        width: 90%;
+        height: 400px;
+    }
+  }
+
+  @media (max-width: 1200px) {
+    .mahsol {
+        width: 100%;
+display: grid;
+grid-template-columns: repeat(2,1fr);
+justify-content: center;
+
+    }
+    .box {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        border: 2px solid cadetblue;
+        border-radius: 10px;
+        width: 75%;
+        height: 75%;
+        margin: 10px 10px 10px 10px;
+        padding: 5px 0 5px 0;
+    }
+  } */
