--- a/style/Home/style.css
+++ b/style/Home/style.css
@@ -77,83 +77,6 @@ header {
     text-align: justify ;
 }
 
-/* باکس های محصولات */
-.mahsol {
-    display: flex;
-    flex-direction: row;
+.bold {
+    font-weight: bold;
 }
-.mahsol {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-.box {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: 2px solid cadetblue;
-    border-radius: 10px;
-    width: 50%;
-    height: 75%;
-    margin: 0 20px 0 20px;
-    padding: 5px 0 5px 0;
-}
-.I-2 {
-
-    background: url(../image/10111.jpg) no-repeat 10% 70%/cover;
-    width: 75%;
-    height: 355px;
-    border-radius: 5px;
-}
-
-.text-box {
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-gap: 5px;
-    
-}
-
-/* @media (max-width: 768px) {
-    .mahsol {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .box {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        border: 2px solid cadetblue;
-        border-radius: 10px;
-        width: 50%;
-        height: 75%;
-        margin: 10px 10px 10px 10px;
-        padding: 5px 0 5px 0;
-    }
-    .I-2 {
-        width: 90%;
-        height: 400px;
-    }
-  }
-
-  @media (max-width: 1200px) {
-    .mahsol {
-        width: 100%;
-display: grid;
-grid-template-columns: repeat(2,1fr);
-justify-content: center;
-
-    }
-    .box {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        border: 2px solid cadetblue;
-        border-radius: 10px;
-        width: 75%;
-        height: 75%;
-        margin: 10px 10px 10px 10px;
-        padding: 5px 0 5px 0;
-    }
-  } */
